# mosquito-cfd

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: copilot-review.md  coverage.md  fix-formatting.md  lint.md  new-feature.md  pr-description.md  pre-merge-check.md  prepare-release.md  review-openspec.md  review-pr.md  run-ci-locally.md  tdd.md  update-changelog.md  validate-env.md
.github/workflows/: ci.yml  docker.yml
benchmarks/: .gitignore  METHODS.md
benchmarks/results/figures/: generate_figures.py  generate_force_figure.py  manifest.json
benchmarks/results/tables/: ellipsoid_forces.csv  resource_projection.csv
cluster/argo/: README.md
cluster/argo/scripts/: monitor_workflow.sh  submit_workflow.sh
cluster/argo/workflow-templates/: force-surrogate-single-config.yaml
cluster/argo/workflows/: force-surrogate-smoke.yaml  force-surrogate-sweep.yaml
docker/: Dockerfile.fp32  Dockerfile.fp64  Dockerfile.python  README.md  build-args.env  entrypoint.sh
docs/: CHANGELOG.md  coordinate-convention.md
docs/aerodynamics_validation/: handoff_t1a.md  handoff_t1b.md  handoff_t2a.md  roadmap.md  t1a-findings.md  t3b-handoff.md  t3c-handoff.md
docs/force_surrogate/: roadmap.md
examples/flapping_wing/: RESULTS.md  forces.csv  forces_fine.csv  forces_medium.csv  forces_t2a_newconv.csv  generate_all_figures.py  generate_validation_figures.py  inputs.3d.convergence_fine  inputs.3d.convergence_medium  inputs.3d.production  inputs.3d.validation  inputs.3d.validation_v2  make_force_decomposition_figure.py  make_force_timeseries_3grid_figure.py  make_grid_convergence_3grid_figure.py  make_grid_convergence_figure.py  make_lev_figure.py  plot_config.py  run.sh  run_metadata_t2a.json  run_metadata_t3b.json  run_metadata_t3c.json  t3c_run_local.sh  visualize.py  wing.vertex
examples/flapping_wing/figures/: README.md  validation_figures_summary.json
examples/flow_past_sphere/: .gitignore  README.md  RESULTS.md  forces_coarse.csv  forces_medium.csv  generate_figures.py  run.sh  visualize.py
examples/heaving_ellipsoid/: README.md  RESULTS.md  forces.csv  forces_t2b_ib.csv  generate_figures.py  inputs.3d.heaving_ellipsoid  run.sh  run_metadata_t2b.json  visualize.py
examples/prelim_sweep/: README.md  base_inputs.3d.validation  dataset.units.json  generate_sweep.py  run_metadata.json  sweep_manifest.json  sweep_manifest.units.json  sweep_provenance.json
examples/prelim_sweep/figures/: evidence_figure_metrics.json  run_metadata.json
examples/prelim_sweep/inputs/: inputs.3d.s35_f085_p30  inputs.3d.s35_f085_p45  inputs.3d.s35_f085_p60  inputs.3d.s35_f100_p30  inputs.3d.s35_f100_p45  inputs.3d.s35_f100_p60  inputs.3d.s35_f115_p30  inputs.3d.s35_f115_p45  inputs.3d.s35_f115_p60  inputs.3d.s45_f085_p30  inputs.3d.s45_f085_p45  inputs.3d.s45_f085_p60  inputs.3d.s45_f100_p30  inputs.3d.s45_f100_p45  inputs.3d.s45_f100_p60  inputs.3d.s45_f115_p30  inputs.3d.s45_f115_p45  inputs.3d.s45_f115_p60  inputs.3d.s55_f085_p30  inputs.3d.s55_f085_p45  inputs.3d.s55_f085_p60  inputs.3d.s55_f100_p30  inputs.3d.s55_f100_p45  inputs.3d.s55_f100_p60  inputs.3d.s55_f115_p30  inputs.3d.s55_f115_p45  inputs.3d.s55_f115_p60
examples/prelim_sweep/surrogate/: holdout_predictions.parquet  metrics.json  run_metadata.json  surrogate.pt
openspec/: AGENTS.md  project.md  runai-dev-workflow.md
openspec/changes/add-apex-benchmarking/: design.md  h100_resource_estimate.md  ml-surrogate-notes.md  proposal.md  tasks.md  timestep_cfl_analysis.md
openspec/changes/add-arbitrary-geometry/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/add-cfd-docker-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/add-example-figures/: tasks.md
openspec/changes/add-force-surrogate-argo-sweep/: design.md  proposal.md  tasks.md
openspec/changes/add-force-surrogate-dataset/: design.md  proposal.md
openspec/changes/add-force-surrogate-evidence-figure/: design.md  proposal.md  tasks.md
openspec/changes/add-force-surrogate-foundation/: design.md  proposal.md
scripts/: extract_forces.py  make_evidence_figure.py  run_sweep.py  train_surrogate.py
src/mosquito_cfd/: __init__.py  generate_wing_markers.py  run_metadata.py
tests/: conftest.py  test_argo_workflows.py  test_convergence_deck.py  test_flapping_band_floor.py  test_flapping_wing_validation.py  test_flapping_wing_validation_figures.py  test_force_surrogate_dataset.py  test_force_surrogate_driver.py  test_force_surrogate_evidence_figure.py  test_force_surrogate_figures.py  test_force_surrogate_fixtures.py  test_force_surrogate_normalization.py  test_force_surrogate_run_one_config.py  test_force_surrogate_run_sweep_driver.py  test_force_surrogate_runner.py  test_force_surrogate_scale_invariance.py  test_force_surrogate_sidecar.py  test_force_surrogate_sweep.py  test_force_surrogate_train.py  test_force_surrogate_train_driver.py  test_force_surrogate_train_gpu.py  test_geometry.py  test_heaving_ellipsoid.py  test_iamrex_pin_consistent.py  test_lev_diagnostic.py  test_methods_pin_consistent.py  test_new_convention_deck_and_docs.py  test_no_false_diffused_ib_claim.py  test_planform_span_axis.py  test_results_reproducibility.py  test_sphere_confinement_grade.py  test_stress_integral.py  test_stress_integral_axis_general.py  test_van_veen_model.py  test_wing_body_frame.py  test_wing_convergence_fine.py  test_wing_convergence_medium.py  test_wing_force_decomposition.py  test_wing_grid_convergence.py  test_wing_kinematics.py  (+1 more)
tests/fixtures/: README.md  make_lev_boxlib_fixture.py  micro_sweep.json  synthetic_ib_particle.csv
(+135 files in other folders)
