[project]
name = "mosquito-cfd"
version = "0.1.0"
description = "CFD simulations of mosquito flight aerodynamics using IAMReX"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyarrow>=18.0.0",
    "yt>=4.4.2",
]

[dependency-groups]
dev = [
    "build>=1.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.1",
]

[project.scripts]
generate-wing-planform = "mosquito_cfd.geometry.cli:main"

[build-system]
# Upper bound per uv_build's own warning: an unbounded backend pulled a newer uv_build that
# hard-errors on the license-files glob, silently breaking the image builds.
requires = ["uv_build>=0.10.3,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "D",  # pydocstyle
]
# ruff format owns line length; don't double-enforce E501 on comments/docstrings it won't wrap.
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
