[project]
name = "mosquito-cfd"
version = "0.1.0"
description = "CFD simulations of mosquito flight aerodynamics using IAMReX"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyarrow>=18.0.0",
    "yt>=4.4.2",
]

[dependency-groups]
dev = [
    "build>=1.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.1",
]
# Force-surrogate training (PR5, Track B). Opt-in only: `uv sync --group train` on the
# local RTX A5000 (Linux/WSL2). NOT installed by the default sync or in CI. The heavy GPU
# wheels are marker-gated to Linux so the universal `uv.lock` still resolves on the Windows
# dev host (design.md D5); `wandb` is pure-python and left ungated. The training code is
# env-agnostic — WSL2, the PhysicsNeMo container, or a native Linux box all run it unchanged.
train = [
    "nvidia-physicsnemo ; sys_platform == 'linux'",
    "torch ; sys_platform == 'linux'",
    # torchvision is pulled transitively by PhysicsNeMo, but it is listed here as a *direct*
    # dep so the cu126 `[tool.uv.sources]` pin below applies to it (uv sources only bind direct
    # deps). Without this, torchvision resolves to the default (cu130) build and its compiled
    # ops ABI-mismatch torch+cu126 → `RuntimeError: operator torchvision::nms does not exist`.
    "torchvision ; sys_platform == 'linux'",
    "wandb>=0.18",
]

# Pin the Linux CUDA build of torch/torchvision to the PyTorch cu126 index (CUDA 12.6). The
# default PyPI wheel is +cu130 (CUDA 13.0), which needs a ~580+ driver; the dev/training A5000
# runs driver 552.86 = CUDA 12.4. A cu126 build is the same CUDA *major* (12.x) and runs on the
# 12.4 driver via CUDA minor-version compatibility — verified `torch.cuda.is_available()` True on
# the A5000 (design.md D5; task 1.2). PhysicsNeMo 2.1.1 supports torch>=2.10 with a `cu12` extra.
# `explicit = true` scopes the index to only torch/torchvision; everything else stays on PyPI.
# Linux-marker-gated so the universal lock still resolves on the Windows dev host.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]

[project.scripts]
generate-wing-planform = "mosquito_cfd.geometry.cli:main"

[build-system]
# Upper bound per uv_build's own warning: an unbounded backend pulled a newer uv_build that
# hard-errors on the license-files glob, silently breaking the image builds.
requires = ["uv_build>=0.10.3,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "D",  # pydocstyle
]
# ruff format owns line length; don't double-enforce E501 on comments/docstrings it won't wrap.
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires a CUDA device and the optional 'train' group (PhysicsNeMo/torch); auto-skipped when unavailable and deselected in CI via `-m \"not gpu\"`",
    "requires_plotfile: requires an AMReX plotfile under $MOSQUITO_CFD_PLOTFILE_ROOT (cluster/Z: data); auto-skipped when absent and deselected in CI via `-m \"not requires_plotfile\"`",
]
